[package]
name = "lopxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.8", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
futures = { version = "0.3.21" }
sysinfo = "0.23.10"
url = "2.2.2"
toml = "0.5.9"
serde = "1.0.136"
serde_derive = "1.0.136"
serde_json = "1.0.79"
chrono = "0.4.19"

util = { path = "../util" }
manager = { path = "../manager" }
proxy = { path = "../proxy" }