[package]
name = "manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1"
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = "1.0.136"
serde_derive = "1.0.136"
serde_json = "1.0.79"
urlencoding = "2.1.0"

proxy = { path = "../proxy" }