[package]
name = "proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0.0"
serde = "1.0.136"
serde_derive = "1.0.136"
tokio = { version = "1", features = ["full"] }
async-std = "1.11.0"
async-shutdown = "0.1.2"
futures = { version = "0.3.21", features = ["async-await"] }
httparse = "1.7.0"
reqwest = { version = "0.11" }
url = "2.2.2"
urlencoding = "2.1.0"

util = { path = "../util" }