[package]
name = "util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(windows)'.dependencies]
winreg = "0.10.1"
winapi = { version = "0.3", features = ["wininet"] }

[dependencies]
cfg-if = "1.0.0"
dirs = "4.0.0"